# shroom-data

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
crates/shroom-wz/: Cargo.toml  gen_fake_keys.sh
crates/shroom-wz-pack/: Cargo.toml  check_schema.sh
crates/shroom-wz-pack/src/: main.rs
crates/shroom-wz-ui/: Cargo.toml  Dioxus.toml
crates/shroom-wz-ui/src/: audio_view.rs  image_view.rs  main.rs  tree.rs  web_map.rs  wz.rs
crates/shroom-wz/src/: canvas.rs  crypto.rs  ctx.rs  file.rs  keys.rs  lib.rs  ty.rs  val.rs  version.rs
crates/shroom-wz/src/l0/: mod.rs  tree.rs
crates/shroom-wz/src/l1/: canvas.rs  mod.rs  obj.rs  prop.rs  ser.rs  sound.rs  str.rs  tree.rs
crates/shroom-wz/src/util/: animation.rs  mod.rs
crates/util/schema_validator/: Cargo.toml
crates/util/schema_validator/src/: main.rs
docs/: index.html
docs/assets/dioxus/: name.js  wz-explorer.js  wz-explorer_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
page/: index.html
page/assets/dioxus/: Shroom WZ Explorer.js  Shroom WZ Explorer_bg.wasm
page/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
