[package]
name = "shroom-wz-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.24"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shroom-wz = { version = "0.1", path = "../shroom-wz", features = ["mmap"] }
