[package]
name = "shroom-wz-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
derive_more = "0.99.17"
dioxus = "0.4"
dioxus-hooks = "0.4"
dioxus-web = "0.4"
gloo = { version = "0.10.0", features = ["futures"] }
id_tree = "1"
image = "0.24"
indexmap = "2.0.2"
js-sys = "0.3"
log = "0.4"
lru = "0.12"
ouroboros = "0.18.0"
shroom-wz = { version = "0.1.0", path = "../shroom-wz", default-features = false}
uuid = "1.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
    "FileList",
    "HtmlInputElement",
    "FileReader",
    "File",
    "Blob",
    "ImageData",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlAudioElement",
    "AudioContext",
    "MediaElementAudioSourceNode",
    "HtmlMediaElement",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioDestinationNode",
    "GainNode",
    "MediaStreamAudioDestinationNode",
    "MediaStream",
    "Url",
    "BlobPropertyBag"
] }
