[package]
name = "shroom-wz"
version = "0.1.0"
edition = "2021"

[features]
default = ["webp"]
mmap = ["memmap2"]
webp = ["webp-animation"]

[dependencies]
webp-animation = { version = "0.9", optional = true }
libwebp-sys2 = { version = "0.1", optional = true, features = ["static"]}
aes = "0.8"
anyhow = "1"
binrw = "0.13"
bytemuck = "1"
id_tree = "1"
image = "0.24"
itoa = "1"
flate2 = { version = "1", features = ["zlib"] }
memmap2 = { version = "0.9", optional = true }
texpresso = "2"
serde = { version = "1", features = ["derive"] }
gif = "0.12"
rodio = "0.17"
derive_more = "0.99"
uuid = { version = "1", features = ["v4"] }
indexmap = { version  = "2", features = ["serde"] }
ouroboros = "0.18"
encoding_rs = "0.8"
serde_json = "1.0.108"
