[package]
name = "schema_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
glob = "0.3"
jsonschema = "0.17"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.4"
